test/e2e/features/auto_host_rewrite/testdata/auto_host_rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "foo.local"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /headers-override
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: "foo.override" # this will override the autoHostRewrite from TrafficPolicy
          path:
            type: ReplaceFullPath
            replaceFullPath: /headers
      backendRefs:
        - name: httpbin-static
          kind: Backend
          group: gateway.kgateway.dev
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: httpbin-static
          kind: Backend
          group: gateway.kgateway.dev
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: auto-host-rewrite
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-route
  autoHostRewrite: true
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: httpbin-static
  namespace: kgateway-base
spec:
  type: Static
  static:
    hosts:
      - host: httpbin.default.svc # static reference to common httpbin k8s svc
        port: 8000
